add 5 questions with 3 choices and several images.

--- a/indexQuest.html
+++ b/indexQuest.html
@@ -9,6 +9,52 @@
     <title>Questionaire</title>
   </head>
   <body>
-   <h2>Who is Your Waifu?</h2>
+    <div class="container">
+      <h2>What is Your Spirit Animal?</h2>
+      <p>What do you do in your down time?</p>
+      <label for="choices"></label>
+      <select id="relaxation" name="question1">
+        <option value=" "> </option>
+        <option value="firstChoice">Naps! I like naps!</option>
+        <option value="secondChoice">Reading is Fun-damental!</option>
+        <option value="thirdChoice">Let's go hiking!</option>
+      </select>
+      <p>Favorite vacation destination?</p>
+      <label for="choices"></label>
+      <select id="color" name="question2">
+        <option value=" "> </option>
+        <option value="firstChoice">Beach</option>
+        <option value="secondChoice">Florence or any of the World's Historic Sites</option>
+        <option value="thirdChoice">Mt.Everest!</option>
+      </select>
+      <p>If you see a fight going on, what would you do?</p>
+      <label for="choices"></label>
+      <select id="morals" name="question3">
+        <option value=" "> </option>
+        <option value="firstChoice">Call the cops to break it up, duh.</option>
+        <option value="secondChoice">Find out who started it.</option>
+        <option value="thirdChoice">Can't hear you over the sound of my awesomeness as I had already separated them and is drinking beer with everyone involved.</option>
+      </select>
+      <p>Which would you rather eat?</p>
+      <label for="choices"></label>
+      <select id="starSign" name="question4">
+        <option value=" "> </option>
+        <option value="firstChoice">Chocolate cake</option>
+        <option value="secondChoice">Sustainable Sushi, of course.</option>
+        <option value="thirdChoice">Steak!</option>
+      </select>
+      <p>What are you afraid of?</p>
+      <label for="choices"></label>
+      <select id="relaxation" name="question5">
+        <option value=" "> </option>
+        <option value="firstChoice">The unknown</option>
+        <option value="secondChoice">Not having the answers.</option>
+        <option value="thirdChoice">Missing out.</option>
+      </select>
+      <br>
+      <button type="submit" name="button">Submit</button>
+
+    </form>
+   </div>
   </body>
 </html>
