started writing scripts for the project.

--- a/indexQuest.html
+++ b/indexQuest.html
@@ -11,50 +11,51 @@
   <body>
     <div class="container">
       <h2>What is Your Spirit Animal?</h2>
-      <p>What do you do in your down time?</p>
-      <label for="choices"></label>
-      <select id="relaxation" name="question1">
-        <option value=" "> </option>
-        <option value="firstChoice">Naps! I like naps!</option>
-        <option value="secondChoice">Reading is Fun-damental!</option>
-        <option value="thirdChoice">Let's go hiking!</option>
-      </select>
-      <p>Favorite vacation destination?</p>
-      <label for="choices"></label>
-      <select id="color" name="question2">
-        <option value=" "> </option>
-        <option value="firstChoice">Beach</option>
-        <option value="secondChoice">Florence or any of the World's Historic Sites</option>
-        <option value="thirdChoice">Mt.Everest!</option>
-      </select>
-      <p>If you see a fight going on, what would you do?</p>
-      <label for="choices"></label>
-      <select id="morals" name="question3">
-        <option value=" "> </option>
-        <option value="firstChoice">Call the cops to break it up, duh.</option>
-        <option value="secondChoice">Find out who started it.</option>
-        <option value="thirdChoice">Can't hear you over the sound of my awesomeness as I had already separated them and is drinking beer with everyone involved.</option>
-      </select>
-      <p>Which would you rather eat?</p>
-      <label for="choices"></label>
-      <select id="starSign" name="question4">
-        <option value=" "> </option>
-        <option value="firstChoice">Chocolate cake</option>
-        <option value="secondChoice">Sustainable Sushi, of course.</option>
-        <option value="thirdChoice">Steak!</option>
-      </select>
-      <p>What are you afraid of?</p>
-      <label for="choices"></label>
-      <select id="relaxation" name="question5">
-        <option value=" "> </option>
-        <option value="firstChoice">The unknown</option>
-        <option value="secondChoice">Not having the answers.</option>
-        <option value="thirdChoice">Missing out.</option>
-      </select>
-      <br>
-      <button type="submit" name="button">Submit</button>
+      <form class="quiz">
+          <!-- 1= Sloth    2= Owl   3= Honey Badger-->
+        <p>What do you do in your down time?</p>
+        <select id="1" name="question1">
+          <option value="0"> </option>
+          <option value="1">Naps! I like  naps!</option>
+          <option value="2">Reading is Fun-damental!</option>
+          <option value="3">Let's go hiking!</option>
+        </select>
 
-    </form>
-   </div>
+        <p>Favorite vacation destination?</p>
+        <select id="2" name="question2">
+          <option value="0"> </option>
+          <option value="1">Beach</option>
+          <option value="2">Florence or any of the World's Historic Sites</option>
+          <option value="3">Mt.Everest!</option>
+        </select>
+
+        <p>If you see a fight going on, what would you do?</p>
+        <select id="3" name="question3">
+          <option value="0"> </option>
+          <option value="1">Call the cops to break it up, duh.</option>
+          <option value="2">Find out who started it.</option>
+          <option value="3">Can't hear you over the sound of my awesomeness as I had already separated them and is drinking beer with everyone involved.</option>
+        </select>
+
+        <p>Which would you rather eat?</p>
+        <select id="4" name="question4">
+          <option value="0"> </option>
+          <option value="1">Chocolate cake</option>
+          <option value="2">Sustainable Sushi, of course.</option>
+          <option value="3">Steak!</option>
+        </select>
+
+        <p>What are you afraid of?</p>
+        <select id="5" name="question5">
+          <option value="0"> </option>
+          <option value="1">The unknown</option>
+          <option value="2">Not having the answers.</option>
+          <option value="3">Missing out.</option>
+        </select>
+
+        <br><br>
+        <button type="submit" name="button">Submit</button>
+      </form>
+    </div>
   </body>
 </html>
